# zino-example

./: .gitignore  Cargo.toml  Makefile  README.md
config/: config.dev.toml
src/: main.rs
src/model/: user.rs
src/router/: mod.rs
