[package]
name = "zino-example"
version = "0.1.0"
edition = "2021"

[dependencies]
zino = { version = "0", features = ["axum", "orm"] }
zino-core = { version = "0", features = ["orm-postgres"] }
zino-derive = { version = "0" }

axum = { version = "0", default-features = false }
serde = { version = "1", features = ["derive"] }
tracing = "0"
